name:                prose-doc
version:             0.1.0.0
synopsis:            Literate programming / documentation tool for Haskell
-- description:
license:             MIT
license-file:        LICENSE
author:              Sami Hangaslammi
maintainer:          shang@iki.fi
category:            Documentation
build-type:          Simple
cabal-version:       >=1.8

data-files: css/prose.css

library
  hs-source-dirs: src

  exposed-modules:  Text.ProseDoc
    , Text.ProseDoc.Rendering
    , Text.ProseDoc.Parser
    , Text.ProseDoc.Tree
    , Text.ProseDoc.Tree.Builder
    , Text.ProseDoc.Classifier
    , Text.ProseDoc.Classifier.Types
    , Text.ProseDoc.Classifier.Tokens

  other-modules: Paths_prose_doc

  build-depends: base >= 4
    , mtl                >= 1.1
    , errors             >= 1.4
    , text               >= 0.11
    , split              >= 0.2
    , blaze-markup       >= 0.6
    , blaze-html         >= 0.7
    , pandoc             >= 1.12
    , haskell-src-exts   >= 1.15
    , syb                >= 0.3
    , filepath           >= 1.3
    , directory          >= 1.2
    , data-default       >= 0.5


executable prose-doc
  main-is: Main.hs

  build-depends: base >= 4, prose-doc
